# ELK-AI-Toolbox

./: .dockerignore  .gitignore  .mcp.json.example  Dockerfile  README.md
docs/: GUIDE.md  INSTALL.md
mcp-server/: pyproject.toml  requirements.txt
mcp-server/mcp_server/: config.py  es_client.py  guards.py  server.py
mcp-server/mcp_server/tools/: aggregate.py  count.py  errors.py  field_values.py  indices.py  mapping.py  parse.py  search.py  server_time.py
skills/: elk-api.md  elk-error.md  elk-inspect.md  elk-report.md  elk-search.md  elk-topn.md  elk-trace.md
tests/: test_config.py  test_es_client.py  test_guards.py  test_server_cli.py  test_tools.py
